# sndra-link

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  dock-compose.yaml  docker-compose.yml  readme.md
public/: index.html
src/: main.rs
