[package]
name = "sndra-link"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.9.0"
 
dotenvy = "0.15.7"


sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio-native-tls"] }